# terrarium

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  README.md  entities.py  events.py  main.py  persistence.py  pyproject.toml  renderer.py  requirements-dev.txt  state.py  world.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
tests/: test_entities.py  test_events.py  test_key_reader.py  test_main_state_persistence.py  test_persistence.py  test_renderer_milestones.py  test_world.py
